tests/macros/input/mask.stderr
error: option `mask` does not exist for kind `input`
 --> $DIR/mask.rs:2:45
  |
2 |     let q = inquisition::questions![Input { mask: todo!() }];
  |                                             ^^^^
