tests/macros/input/mask.rs
fn main() {
    let q = inquisition::questions![Input { mask: todo!() }];
}
